@@ -2,3 +2,4 @@
 WatchMDH - New site
 Pornhoarder - Fix listings
 Uflash - Fix
+NoodleMagazine - Fix playback
